# pet-shop-api

./: .env.exemple  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: config.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  auth.py  pets.py
app/core/: exceptions.py  security.py  security_config.py
app/crud/: __init__.py  base.py  pet.py  user.py
app/db/: __init__.py  base.py  init_db.py  session.py
app/models/: __init__.py  pet.py  user.py
app/schemas/: __init__.py  pet.py  user.py
tests/: conftest.py
tests/test_api/: test_auth.py  test_pets.py
